<resources>
    <string name="app_name">Just Do It</string>
    <string name="app_sub_title">Your work buddy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="priority">Priority</string>
    <string name="category">Category</string>
    <string name="titleText">Title</string>
    <string name="descriptionText">Description</string>
    <string name="dueDateText">Due Date</string>
    <string name="imgUploadText">Upload Image</string>
    <string name="completeText">Complete</string>
    <string name="completedText">Completed</string>
    <string name="statusText">Status</string>
    <string name="editText">Edit</string>
    <string name="deleteText">Delete</string>

    <string-array name="priorityItems">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
        <!-- Add more items as needed -->
    </string-array>
    <string-array name="categoryItems">
        <item>Work</item>
        <item>Study</item>
        <item>Meeting</item>
        <item>Party</item>
        <item>Playing</item>
        <!-- Add more items as needed -->
    </string-array>
    <string-array name="completedItemsHome">
        <item>All</item>
        <item>Pending</item>
        <item>Completed</item>
        <!-- Add more items as needed -->
    </string-array>
    <string-array name="priorityItemsHome">
        <item>All</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
        <!-- Add more items as needed -->
    </string-array>
    <string-array name="categoryItemsHome">
        <item>All</item>
        <item>Work</item>
        <item>Study</item>
        <item>Meeting</item>
        <item>Party</item>
        <item>Playing</item>
        <!-- Add more items as needed -->
    </string-array>

</resources>