<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AddTaskPopFragment"
    app:cardBackgroundColor="@color/sub_white"
    android:background="@drawable/rounded_border"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:cardCornerRadius="20dp">

        <TextView
            android:id="@+id/titleTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create new task"
            android:fontFamily="@font/dmsans_bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.00"/>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/popUpClose"
            android:src="@drawable/baseline_close_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.968"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:id="@+id/inputContainer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/titleTxt"
            android:layout_marginTop="16dp">

            <TextView
                android:text="@string/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dmsans_semibold"
                android:textSize="16dp"
                android:paddingBottom="5dp"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintEnabled="false"
                android:paddingBottom="12dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titleEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:fontFamily="@font/dmsans_semibold"
                    android:textSize="14dp"
                    android:hint="Title"
                    tools:ignore="MissingConstraints"
                    android:background="@drawable/rounded_border"
                    >

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:text="@string/descriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dmsans_semibold"
                android:textSize="16dp"
                android:paddingBottom="5dp"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintEnabled="false"
                android:paddingBottom="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:fontFamily="@font/dmsans_semibold"
                    android:textSize="14dp"
                    android:hint="Description..."
                    android:background="@drawable/rounded_border">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:text="@string/dueDateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dmsans_semibold"
                android:textSize="16dp"
                android:paddingBottom="5dp"
                />
            <TextView
                android:id="@+id/tvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:hint="Select Due Date"
                android:background="@drawable/rounded_border"
                android:padding="8dp"
                android:fontFamily="@font/dmsans_semibold"
                android:textSize="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/uploaderLayout"
                app:layout_constraintTop_toBottomOf="@+id/categorySpinner"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/inputContainer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/inputContainer1"
            android:paddingVertical="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:paddingVertical="10sp"
                android:paddingRight="5dp">
                <TextView
                    android:id="@+id/textView2"
                    android:text="@string/priority"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dmsans_bold"
                    android:textSize="16dp"
                    />

                <Spinner
                    android:id="@+id/prioritySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dmsans_bold"
                    android:background="@drawable/rounded_border"
                    android:entries="@array/priorityItems"
                    android:padding="8dp"
                    android:textSize="14dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:paddingVertical="10sp"
                android:paddingLeft="5dp">

                <TextView
                    android:id="@+id/CategoryTxt"
                    android:text="@string/category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dmsans_bold"
                    android:textSize="16dp"
                    />

                <Spinner
                    android:id="@+id/categorySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/categoryItems"
                    android:background="@drawable/rounded_border"
                    android:padding="8dp"
                    android:fontFamily="@font/dmsans_semibold"
                    android:textSize="14dp"/>

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/imgUpload"
            android:text="@string/imgUploadText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dmsans_semibold"
            android:textSize="16dp"
            android:paddingBottom="5dp"
            app:layout_constraintTop_toBottomOf="@id/inputContainer2"/>
        <LinearLayout
            android:id="@+id/uploaderLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/imgUpload"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/placeholdContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:scaleType="centerInside"
                android:src="@drawable/baseline_cloud_upload_24"
                android:layout_weight="1" />

            <Button
                android:id="@+id/selectImageBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Select Image"
                android:layout_weight="1."
                android:outlineSpotShadowColor="@color/main_blue"
                app:backgroundTint="@color/sub_gray" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:id="@+id/saveBtn"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/uploaderLayout"
            app:layout_constraintVertical_bias="0.975"
            android:layout_marginTop="15dp"
            app:backgroundTint="@color/main_blue"
            android:text="Save"
            >

        </com.google.android.material.button.MaterialButton>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>